@@ -1,5 +1,12 @@
 2007-05-12  Denis Washington  <denisw@svn.nome.org>
 
+	* appearance-desktop.c: Changed the icon view's selection mode to
+	GTK_SELECTION_BROWSE, fixed scrolling to the currently active
+	background after the icon view is realized, and two other minor
+	fixes.
+
+2007-05-12  Denis Washington  <denisw@svn.nome.org>
+
 	* appearance-desktop.c: (wp_remove_wallpaper):
 	gtk_icon_view_set_cursor() => gtk_icon_view_select_path()
 
